--- a/Config.toml
+++ b/Config.toml
@@ -1,5 +1,7 @@
 [database]
 url = "mysql://root:123456@192.168.2.142:23309/gym"
+[redis]
+url = "redis://192.168.2.142:16379/"
 [web]
 addr = "0.0.0.0"
 port = 3030
