--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,13 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_derive = "1.0.203"
 serde_json = "1.0"
 # 数据库orm
-sea-orm = { version = "0.12.15", features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros", "debug-print"] }
+sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-mysql", "macros", "debug-print"] }
 #连接池管理
-bb8 = "0.7.1"
+bb8 = "0.8.5"
 #redis - bb8连接池
-bb8-redis = "0.14.0"
+bb8-redis = "0.15.0"
 # redis
-redis = "0.24.0"
+redis = "0.25.4"
 # 为 Rust 应用程序组织分层或分层配置
 config = "0.13"
 # 此库从 .env 文件加载环境变量。
@@ -34,7 +34,9 @@ dotenv = "0.15"
 # 日志
 tracing = "0.1"
 # 日志订阅者
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+#日志落盘
+tracing-appender = "0.2"
 # 日期和时间
 chrono = { version = "0.4.24", features = ["serde"] }
 http = "1.1.0"
