--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ tower = { version = "0.4.13", features = ["timeout"] }
 futures = "0.3.30"
 futures-util = "0.3.30"
 hyper = "1.3.1"
+# graphql
+async-graphql = "7.0.6"
+async-graphql-axum = "7.0.6"
 # 参数校验
 validator = { version = "0.18.1", features = ["derive"] }
 axum-valid = "0.18.0"
@@ -20,7 +23,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_derive = "1.0.203"
 serde_json = "1.0"
 # 数据库orm
-sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-mysql", "macros", "debug-print"] }
+sea-orm = { version = "0.12.15", features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros", "debug-print"] }
 #连接池管理
 bb8 = "0.8.5"
 #redis - bb8连接池
